bookservice/src/main/kube/bookservice.yaml
---
# Deployment descriptor
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: "bookservice"
    app.kubernetes.io/component: "bookservice"
    app.kubernetes.io/part-of: "bookservice"
    app.kubernetes.io/instance: "bookservice-main"
    app.kubernetes.io/version: "1.0.3"
  name: "bookservice"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "bookservice"
      app.kubernetes.io/component: "bookservice"
      app.kubernetes.io/part-of: "bookservice"
      app.kubernetes.io/instance: "bookservice-main"
      app.kubernetes.io/version: "1.0.3"
  template:
    metadata:
      annotations:
        k8s.grafana.com/scrape: "true"
      labels:
        app.kubernetes.io/name: "bookservice"
        app.kubernetes.io/component: "bookservice"
        app.kubernetes.io/part-of: "bookservice"
        app.kubernetes.io/instance: "bookservice-main"
        app.kubernetes.io/version: "1.0.3"
    spec:
      containers:
      - name: bookservice
        image: "alainpham/bookservice:1.0.3"
        imagePullPolicy: "Always"
        livenessProbe:
          httpGet:
            path: "/health/live"
            port: 8080
            scheme: "HTTP"
          initialDelaySeconds: 0
          successThreshold: 1
          periodSeconds: 10
          failureThreshold: 40 
        readinessProbe:
          httpGet:
            path: "/health/ready"
            port: 8080
            scheme: "HTTP"
          initialDelaySeconds: 0
          successThreshold: 1
          periodSeconds: 10
          failureThreshold: 40 
        resources:
          # limits:
          #   cpu: "1.0"
          #   memory: "1024Mi"
          # requests:
          #   cpu: "0.2"
          #   memory: "128Mi"
        ports:
          - containerPort: 8080
        volumeMounts:
      volumes:
---
apiVersion: "v1"
kind: "Service"
metadata:
  labels:
    app.kubernetes.io/name: "bookservice"
    app.kubernetes.io/component: "bookservice"
    app.kubernetes.io/part-of: "bookservice"
    app.kubernetes.io/instance: "bookservice-main"
    app.kubernetes.io/version: "1.0.3"
  name: "bookservice"
spec:
  type: ClusterIP
  ports:
  - name: "http"
    port: 8080
    protocol: "TCP"
    targetPort: 8080
  selector:
    app.kubernetes.io/name: "bookservice"
    app.kubernetes.io/component: "bookservice"
    app.kubernetes.io/part-of: "bookservice"
    app.kubernetes.io/instance: "bookservice-main"
    app.kubernetes.io/version: "1.0.3"
---
